--- a/postgres-connector/package.json
+++ b/postgres-connector/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "pg": "^8.15.6",
     "pg-logical-replication": "^2.0.7",
