--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "format": "prettier --write \"appsource/src/**/*.ts\" \"postgres-connector/src/**/*.ts\"",
-    "lint": "eslint \"{appsource/src,postgres-connector/src}/**/*.ts\" --fix",
+    "format": "prettier --write \"feed-server/src/**/*.ts\" \"feed-client/src/**/*.ts\" \"postgres-connector/src/**/*.ts\"",
+    "lint": "eslint \"{feed-server/src,feed-client/src,postgres-connector/src}/**/*.ts\" --fix",
     "prepare": "husky"
   },
   "devDependencies": {
