--- a/feed-server/package.json
+++ b/feed-server/package.json
@@ -18,14 +18,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.11.3",
     "@keyv/redis": "^4.3.4",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "cache-manager": "^6.4.2",
+    "graphql": "^16.11.0",
+    "graphql-scalars": "^1.24.2",
     "lodash": "^4.17.21",
     "pg": "^8.15.6",
     "pg-logical-replication": "^2.0.7",
