--- a/feed-server/package.json
+++ b/feed-server/package.json
@@ -11,6 +11,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "seed": "ts-node src/seed.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -32,6 +33,7 @@
     "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
     "lodash": "^4.17.21",
+    "nest-commander": "^3.17.0",
     "pg": "^8.15.6",
     "pg-logical-replication": "^2.0.7",
     "redis": "^5.0.0",
